*aravis-0.6.4 (02 Sep 2019)

  02 Sep 2019;  <bemeurer@gentoo.org> +aravis-0.6.4.ebuild, +metadata.xml:
  media-video/aravis: bump 0.6.4