@@ -1,4 +1,5 @@
 DIST aravis-0.6.4.tar.gz 2972111 BLAKE2B b7f1c4da08bb4e7d11faffcd4ef90b7215b803e5e74ba1730388e04304685b761024ffea49b082c94e3fddc9dc65201545167a277b1088ad7273d41d50fae5b0 SHA512 6090fd730ad9fe8e1641e48c52189e8961bf03a88cefb57135a2de985c2ca607c21b05d472a60586976aa1e05ba2121246b06b75179dd3241e1f703aad8dd7be
+EBUILD aravis-0.6.4-r1.ebuild 1981 BLAKE2B 5d65064a67cbc48b7a81fc95e992b8e5ef493240ed0645f91dd957c98c00cebe0e6adf1ae251e199f5a29ff4189c5c05672eb809842ac37338c190e86c1698eb SHA512 cf2ef7816d5a75bfb3aec5a86ac2602178c9369216294ab47a19092409466a7df99c6c1ca25d0d3ac9f4922aca57ebaaaed42dfbde9afacc69f3649e20bd4ea0
 EBUILD aravis-0.6.4.ebuild 1709 BLAKE2B 6c6b9f6edbdc6c9e14a65fd16d9aee8698dbdb5cb01b14b945199b071cc16b838ec0c75d2b57e5f2c890e8e67f30b10a8717e8f354a33ff6f3a0c670b1418047 SHA512 0e3304072f7314ac2b78bc18c7fe36a429314d68782cee557b3e5bf0bee045136574f70da9aa98d2fd70dd8751e9c98daea4cd7b5ccd8486c5acafebccfafebc
-MISC ChangeLog 137 BLAKE2B 1fd2ea4471fc99a12b09589c007358fe01b81658c57f2f9d1596f23b5e9f91ab6ca6d97ad0b581679b6df4258662c1e37ab027ac23060fee406e50f581cb20bc SHA512 121d18a0c7d4902ecdd9523cd20763efc3aa226184ba60186dfb3f2ca2cfe2da759f1299cbad696fb48934e0179192df9a9a4604f7a6f6e75c37068e7ebe1b68
+MISC ChangeLog 282 BLAKE2B c94db04464f0798724d718959683825938c02e44d0d4edbe152197f43da9f1c8024469f647c37d83d02ba75a3c08623dbc6ffb3835cfbc8319302ab0c58724eb SHA512 33e8c40ac2f681d8307db53b53804070d25d44b49b5690c74c6405c4fd555ba584e25bbbd5300b974b59032126e8e5fb35e9332bf810455ce81a2c3894258861
 MISC metadata.xml 1033 BLAKE2B b1f6f5e7f9a1c8f81dbb5717bbef6c6828bb922537f7408dadd4b03f6a5329ae1e451a1371fe411a78c9212f78497ba4f57fb433a7d31fd6aaccf2c196794e11 SHA512 f13cf2a72f4194f01d4f744611d525c95bc77d3e1faf0a5e01671696bd7ed1cf13b35a87bddfff8626f4bc206e5c9eeef175c15889affa726309c3b07bd48841
